--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "loader-utils": "3.2.1",
     "lodash": "^4.17.21",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
